# Hackathon

./: README.md  package-lock.json  pyproject.toml
_server/: .env.example  .gitignore
_server/_server/: settings.py  urls.py
_server/core/: models.py  urls.py  views.py
_server/core/migrations/: 0002_remove_item_grocery_list_chatsession_chatmessage_and_more.py  0002_rename_grocerylist_sessionlist_and_more.py  0003_remove_chatmessage_session_grocerylist_item_and_more.py  0003_remove_item_purchased.py  0004_chatmessage_user.py
_server/registration/templates/registration/: base.html  sign_in.html  sign_up.html
_server/static/sounds/: .sounds.examples
client/: package-lock.json  package.json
client/src/: App.jsx  index.css  main.jsx
client/src/pages/home/: _GeminiTest.jsx  _Home.jsx
client/src/pages/meditation/: meditationPage.jsx
client/src/pages/new_list/: _NewList.jsx  _SessionLists.jsx
